// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnResizing snapshots should render ColumnResizing 1`] = `
<DocumentFragment>
  <div
    class="css-wcnq0t SectionColumn SectionColumn--light"
    data-test-section=""
  >
    <div
      class="SectionColumn__labels SectionColumn__labels--light"
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-wcnq0t SectionColumn__label SectionColumn__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Resizing
      </small>
    </div>
    <div
      class="SectionColumn__wrapper SectionColumn__wrapper--light"
    >
      <div
        class="SectionColumn__content SectionColumn__content--light SectionColumn__content--two-inputs SectionColumn__content--two-inputs--light"
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-wcnq0t TextField TextField--light TextField--full-width TextField--full-width--light"
          data-test-text-field="width"
        >
          <div
            class="ScrubbableInput ScrubbableInput--light"
            data-test-scrubbable-input="width"
          >
            <small
              class="css-wcnq0t Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
              data-test-text=""
              style="text-align: inherit;"
            >
              W
            </small>
          </div>
          <input
            class="TextField__input TextField__input--light"
            data-test-text-field-input="width"
            maxlength="6"
            type="number"
            value="100"
          />
        </div>
        <div
          class="css-wcnq0t TextField TextField--light TextField--full-width TextField--full-width--light"
          data-test-text-field="height"
        >
          <div
            class="ScrubbableInput ScrubbableInput--light"
            data-test-scrubbable-input="height"
          >
            <small
              class="css-wcnq0t Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
              data-test-text=""
              style="text-align: inherit;"
            >
              H
            </small>
          </div>
          <input
            class="TextField__input TextField__input--light"
            data-test-text-field-input="height"
            maxlength="6"
            type="number"
            value="100"
          />
        </div>
      </div>
      <div
        class="SectionColumn__buttons SectionColumn__buttons--light"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnResizing snapshots should render when values are mixed 1`] = `
<DocumentFragment>
  <div
    class="css-wcnq0t SectionColumn SectionColumn--light"
    data-test-section=""
  >
    <div
      class="SectionColumn__labels SectionColumn__labels--light"
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-wcnq0t SectionColumn__label SectionColumn__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Resizing
      </small>
    </div>
    <div
      class="SectionColumn__wrapper SectionColumn__wrapper--light"
    >
      <div
        class="SectionColumn__content SectionColumn__content--light SectionColumn__content--two-inputs SectionColumn__content--two-inputs--light"
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-wcnq0t TextField TextField--light TextField--full-width TextField--full-width--light"
          data-test-text-field="width"
        >
          <div
            class="ScrubbableInput ScrubbableInput--light ScrubbableInput--disabled ScrubbableInput--disabled--light"
            data-test-scrubbable-input="width"
          >
            <small
              class="css-wcnq0t Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
              data-test-text=""
              style="text-align: inherit;"
            >
              W
            </small>
          </div>
          <div
            class="css-wcnq0t Chip Chip--light"
            data-test-button-icon=""
          >
            Mixed
          </div>
          <input
            class="TextField__input TextField__input--light"
            data-test-text-field-input="width"
            maxlength="6"
            type="text"
            value=""
          />
        </div>
        <div
          class="css-wcnq0t TextField TextField--light TextField--full-width TextField--full-width--light"
          data-test-text-field="height"
        >
          <div
            class="ScrubbableInput ScrubbableInput--light ScrubbableInput--disabled ScrubbableInput--disabled--light"
            data-test-scrubbable-input="height"
          >
            <small
              class="css-wcnq0t Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
              data-test-text=""
              style="text-align: inherit;"
            >
              H
            </small>
          </div>
          <div
            class="css-wcnq0t Chip Chip--light"
            data-test-button-icon=""
          >
            Mixed
          </div>
          <input
            class="TextField__input TextField__input--light"
            data-test-text-field-input="height"
            maxlength="6"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="SectionColumn__buttons SectionColumn__buttons--light"
      />
    </div>
  </div>
</DocumentFragment>
`;
